must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/autoscaling.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-23T06:28:19Z"
  generation: 2
  labels:
    k8s-app: cluster-autoscaler-operator
  name: autoscaling.openshift.io
  resourceVersion: "8662"
  uid: d9b6347b-7c36-4802-8f2d-06761edfbd59
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJU2VCaVlGL2l4ZHN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM09UVTFNamcwTmpBZQpGdzB5TXpBek1qTXdOakkzTWpWYUZ3MHlOVEExTWpFd05qSTNNalphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemsxTlRJNE5EWXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ2VIN2tjNTFwYVE0dWRUdXpnZ0JlR0RDcW1PdWNxb2hOegpJamdtQUJuVlAwVG [...]
    service:
      name: cluster-autoscaler-operator
      namespace: openshift-machine-api
      path: /validate-clusterautoscalers
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: clusterautoscalers.autoscaling.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - autoscaling.openshift.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJU2VCaVlGL2l4ZHN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM09UVTFNamcwTmpBZQpGdzB5TXpBek1qTXdOakkzTWpWYUZ3MHlOVEExTWpFd05qSTNNalphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemsxTlRJNE5EWXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ2VIN2tjNTFwYVE0dWRUdXpnZ0JlR0RDcW1PdWNxb2hOegpJamdtQUJuVlAwVG [...]
    service:
      name: cluster-autoscaler-operator
      namespace: openshift-machine-api
      path: /validate-machineautoscalers
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: machineautoscalers.autoscaling.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - autoscaling.openshift.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - machineautoscalers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
