must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/prometheusrules.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-23T06:32:06Z"
  generation: 2
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
  name: prometheusrules.openshift.io
  resourceVersion: "17025"
  uid: be256b02-a056-4d9d-a624-0708567eee34
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJU2VCaVlGL2l4ZHN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM09UVTFNamcwTmpBZQpGdzB5TXpBek1qTXdOakkzTWpWYUZ3MHlOVEExTWpFd05qSTNNalphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemsxTlRJNE5EWXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ2VIN2tjNTFwYVE0dWRUdXpnZ0JlR0RDcW1PdWNxb2hOegpJamdtQUJuVlAwVG [...]
    service:
      name: prometheus-operator-admission-webhook
      namespace: openshift-monitoring
      path: /admission-prometheusrules/validate
      port: 8443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: prometheusrules.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - prometheusrules
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
