must-gather.local.5022534670626055853/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4f65e564ad1ba0b86c140668c833c753dae7bd2def50c6e88c4afb7e45148870/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/snapshot.storage.k8s.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2023-03-23T06:27:24Z"
  generation: 2
  labels:
    app: csi-snapshot-webhook
  name: snapshot.storage.k8s.io
  resourceVersion: "4614"
  uid: 6a56fa65-3f70-40fc-bf9d-7064a8a2a6dc
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJU2VCaVlGL2l4ZHN3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZM09UVTFNamcwTmpBZQpGdzB5TXpBek1qTXdOakkzTWpWYUZ3MHlOVEExTWpFd05qSTNNalphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOemsxTlRJNE5EWXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ2VIN2tjNTFwYVE0dWRUdXpnZ0JlR0RDcW1PdWNxb2hOegpJamdtQUJuVlAwVG [...]
    service:
      name: csi-snapshot-webhook
      namespace: openshift-cluster-storage-operator
      path: /volumesnapshot
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: volumesnapshotclasses.snapshot.storage.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - snapshot.storage.k8s.io
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - volumesnapshots
    - volumesnapshotcontents
    - volumesnapshotclasses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
